--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 <p><span class="Bolder"> &nbsp;&nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP, 2017(poster)  </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP 2017 (poster)  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services. IEEE Internet Computing, 2017  </span></p>
 
@@ -183,9 +183,12 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover. IEEE Transactions on Services Computing,2016    </span></p> 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   R.Yang and J.Xu. Computing at Massive Scale: Scalability and Dependability Challenges. IEEE SOSE 2016</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   X.Ouyang, P.Garraghan, R.Yang, P.Townend and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, IEEE DSN 2016 (short paper)</span></p>
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang and J.Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale. VLDB 2014</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   L.Cui, J.Li, T. Wo, B.Li, R.Yang, Y.Cao, and J.Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, USENIX LISA, 2014 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   L.Cui, J.Li, T. Wo, B.Li, R.Yang, Y.Cao, and J.Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, USENIX LISA 2014 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Recent publications could be also found here:  
 <a href="publications.html">[Complete List] </a> 
