--- a/publications_topics.html
+++ b/publications_topics.html
@@ -103,7 +103,7 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[6] Software-Defined Storage in Joint Clouds
 		<a href="paper/ccfcomm2017.pdf">[article]</a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Communications of CCF (《中国计算机学会通讯》 in Chinese), 2017 </span>&nbsp;&nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Communications of CCF (in Chinese), 2017 </span>&nbsp;&nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Tianyu Wo*,  Yuandong Wang, Chunming Hu and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
@@ -156,9 +156,8 @@ Multi-Tenants Cloud Environments <a href="paper/hase2016.pdf">[paper]</a>&nbsp; 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 17th IEEE International Symposium on High Assurance Systems Engineering (HASE 2016), Orlando, Florida, USA </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Tianyu Wo*, Chunming Hu, Jie Xu and Mingming Zhang &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[1] Fail at Scale (译文《大规模系统中的故障》)
- <a href="paper/ccfcomm2016.pdf">[article]</a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Communications of CCF (《中国计算机学会通讯》 in Chinese), Volume 12, Jan, page 86-92, 2016 </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[1] Fail at Scale  <a href="paper/ccfcomm2016.pdf">[article]</a>&nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Communications of CCF (in Chinese), Volume 12, Jan, page 86-92, 2016 </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Jin Ouyang, Chunming Hu&nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
