--- a/index.html
+++ b/index.html
@@ -76,17 +76,14 @@
 
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;  "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Scientist, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Scientist, Big Data and Brain Computing Research Center(BDBC), <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p>
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;State Key Laboratory of Software Development Environment</p>
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;School of Computer Science and Engineering, Beihang University, China&nbsp;</p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (LS):&nbsp; Room 8.02, E.C.Stoner Building, Leeds, UK, LS2 9JT &nbsp;</p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (BJ):&nbsp; Room G504, New Main Building, No.37,Xueyuan Rd.,Haidian District,Beijing, China, 100191.&nbsp;</p>
 
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office:&nbsp; Room G504, New Main Building</p>
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Address: #7-28,No.37,Xueyuan Rd.,Haidian District, Beijing, China, 100191.&nbsp;</p>
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: yangry AT act DOT buaa DOT edu DOT cn&nbsp; </p>
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tel: &#43;86(010) 8233 9284&nbsp; </p>
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fax: &#43;86(010) 8233 9274&nbsp; </p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: renyu.yang AT buaa DOT edu DOT cn or  </p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;  r.yang1 AT leeds DOT ac DOT uk &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp;&nbsp;
 <a href="http://www.renren.com/232420623/profile" target="_blank">
     <img src="icons/renren.png" width="30" height="30" alt="Renren" border="0" title="RenRen" /></a> 
@@ -109,7 +106,7 @@
 
 </td>
 <td width="242" align="left" nowrap="" class="style12">
-<p class="style11"><span class="name"><img src="images/yangry2017.jpg" height="408" width="278"></span></p>
+<p class="style11"><span class="name"><img src="images/yangry2017.jpg" height="288" width="192"></span></p>
 </td>
 </tr>
 </tbody>
@@ -200,7 +197,7 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp;  Co-advised Students </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xiaoyang Sun, Lian Du (Master student)</span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Jianyong Zhu, Tian Lan (PhD. student)</span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Jianyong Zhu (PhD. student)</span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yunfei Liu, Zhenping Li, Min Shi, Junqing Xiao, Ximing Qu (Master student)</span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xixu Wang (Master graduated in 2017, first employment at Baidu Inc.) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yuda Wang (Master graduated in 2015, first employment at China Telecom.) </span></p> 
