--- a/index.html
+++ b/index.html
@@ -250,38 +250,31 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
 <a href="http://www.zhenyu.info" target="Dr. Zhenyu Wen"> Dr. Zhenyu Wen</a> &nbsp;&nbsp;
+&nbsp; &nbsp; 
+<a href="http://act.buaa.edu.cn/cuilei" target="_blank">Dr. Lei Cui</a> &nbsp;&nbsp;
+&nbsp; &nbsp; 
+<a href="http://www.tlin.me/" target="_blank"> Mr. Tao Lin</a> &nbsp;&nbsp;
 </span></p>
+
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
 <a href="http://uk.linkedin.com/in/ismaelsm/" target="_blank">Dr. Ismael Solis Moreno</a> &nbsp;&nbsp;
-</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
+&nbsp; &nbsp; 
 <a href="http://www.lancaster.ac.uk/scc/about-us/people/peter-garraghan" target="_blank">Dr. Peter Garraghan</a> &nbsp;&nbsp;
-</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
-<a href="https://scholar.google.com/citations?user=kKwo21wAAAAJ&hl=zh-CN" target="_blank">Mrs. Xue Ouyang </a> &nbsp;&nbsp;
-</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
-<a href="http://act.buaa.edu.cn/cuilei" target="_blank">Dr. Lei Cui</a> &nbsp;&nbsp;
-</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
+&nbsp; &nbsp; 
+<a href="https://scholar.google.com/citations?user=kKwo21wAAAAJ&hl=zh-CN" target="_blank">Dr. Xue Ouyang</a> &nbsp;&nbsp;
+&nbsp; &nbsp; 
 <a href="http://www.paultownend.com/" target="_blank">Dr. Paul Townend</a>&nbsp;&nbsp;
 </span></p>
- 
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
-<a href="https://sites.google.com/site/firmamentqj/" target="_blank">Dr. Jie Qin </a> &nbsp;&nbsp;
+<a href="https://sites.google.com/site/firmamentqj/" target="_blank">Dr. Jie Qin</a> &nbsp;&nbsp;
+&nbsp; &nbsp; 
+<a href="https://jiemingzhu.github.io" target="_blank">Dr. Jieming Zhu</a> &nbsp;&nbsp;
 </span></p>
 
 
-<p class="info">
-<div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'http://act.buaa.edu.cn/yangrenyu', 'user' : 1110240, 'server' : '2', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2014-12-22', 'lang' : 'zh', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www2.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www2.clustrmaps.com/user/2c810f0e0"><img src="http://www2.clustrmaps.com/stats/maps-no_clusters/act.buaa.edu.cn-yangrenyu-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
-</p>
-
-<p class="info">designed by Renyu Yang and updated by 28th September, 2017 </p>
+<p class="info">designed by Renyu Yang and updated by 19th December, 2017 </p>
 
 </body>
 </html>
