minor format bugfix

--- a/index.html
+++ b/index.html
@@ -125,11 +125,6 @@
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/08/2017) The work of rapid docker container deployment was accepted by IEEE HPCC 2017. </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (07/01/2017) I passed the viva and obtained my Ph.D degree. </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (21/11/2016) Our paper <a href="paper/ic2017.pdf">"Fog Orchestration for
-Internet of Things Services"</a>&nbsp; is accepted by IEEE Internet Computing magazine. </span></p>
-
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Check more previous events in <a href="news.html"> old events </a></span></p>
 
 
@@ -145,31 +140,34 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 </span></p>
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp; Academia & Industrial Experiences </span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Academia & Industrial Experiences </span></p>
 
-<p lang="en-US"><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2007.9-2011.6: &nbsp;&nbsp; B.Sc. (Supervised by Dr. Tianyu Wo), Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2007.9-2011.6: &nbsp;&nbsp; B.Sc. (Supervised by Dr. Tianyu Wo), Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p lang="en-US"><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2011.9-2017.1: &nbsp;&nbsp; Ph.D. (Supervised by Prof. Jie Xu), Beihang University, &nbsp;China &nbsp;&nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2011.9-2017.1: &nbsp;&nbsp; Ph.D. (Supervised by Prof. Jie Xu), Beihang University, &nbsp;China &nbsp;&nbsp;&nbsp;</span></p>
 
-<p lang="en-US"><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2012.10-2013.1: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2012.10-2013.1: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
-<p lang="en-US"><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2013.12 and 2016.4: &nbsp; Visiting Researcher, &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2013.12 and 2016.3: &nbsp; Visiting Researcher, &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
-<p lang="en-US"><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2014.2-2015.6: &nbsp;&nbsp; R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433"> Zhuo Zhang </a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b"> Chao Li </a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2014.2-2015.6: &nbsp;&nbsp; R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433"> Zhuo Zhang </a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b"> Chao Li </a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
 
-<p lang="en-US"><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2015.7-2016.2: &nbsp;&nbsp; R&D Intern (Mentored by Mr. Chao Li and Yihui Feng), Distributed Scheduling Group, ODPS, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2015.7-2016.2: &nbsp;&nbsp; R&D Intern (Mentored by Mr. Chao Li and Yihui Feng), Distributed Scheduling Group, ODPS, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.3- 2017.9: &nbsp;&nbsp; Research Fellow and Project Director, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.10 - Present: &nbsp;&nbsp; Research Scientist, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
+
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems for big data and Cloud computing</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Resource management, fault tolerance, dependability </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Large-scale system profiling, data-driven optimization </span></p>
 
 
-<p lang="en-US"><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2017.3- 2017.10: &nbsp;&nbsp; Research Fellow and Project Director, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp; Research Interests</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed system, Cloud computing</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Resource automatic management, dependability, and energy-efficiency </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; System profiling, large-scale data analysis, data-driven optimization </span></p>
-
-
-
-<p><span class="Bolder"> &nbsp;&nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p> 
+<p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p> 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP 2017 (poster)  </span></p>
 
@@ -179,13 +177,13 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover. IEEE Transactions on Services Computing,2016    </span></p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   R.Yang and J.Xu. Computing at Massive Scale: Scalability and Dependability Challenges. IEEE SOSE 2016</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  R.Yang and J.Xu. Computing at Massive Scale: Scalability and Dependability Challenges. IEEE SOSE 2016</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   X.Ouyang, P.Garraghan, R.Yang, P.Townend and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, IEEE DSN 2016 (short paper)</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  X.Ouyang, P.Garraghan, R.Yang, P.Townend and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, IEEE DSN 2016 (short paper)</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang and J.Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale. VLDB 2014</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang and J.Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale. VLDB 2014</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   L.Cui, J.Li, T. Wo, B.Li, R.Yang, Y.Cao, and J.Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, USENIX LISA 2014 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  L.Cui, J.Li, T. Wo, B.Li, R.Yang, Y.Cao, and J.Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, USENIX LISA 2014 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Recent publications could be also found here:  
 <a href="publications.html">[Complete List] </a> 
@@ -195,7 +193,7 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp;  Co-advised Students </span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xiaoyang Sun, Lian Du (Master student)</span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Jianyong Zhu (PhD. student)</span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yunfei Liu, Zhenping Li, Min Shi, Junqing Xiao, Ximing Qu (Master student)</span>&nbsp;&nbsp;</p>
@@ -205,32 +203,32 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some talks including the technical reports in the industrial meetings or academic presentations I gave could be found here: <a href="presentations.html"> talks </a> </span></p>
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp; Patents</span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Patents</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some Chinese patents I have applied in the computer science and application field could be found in <a href="patents.html"> patents </a> </span></p>
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp;  Activities</span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Activities</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2011.10 - 2015.11: Secretary general&nbsp;of China 973 Fundamental R&amp;D Program (2011CB302602)</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2011.10 - present: Organiser and Chair of&nbsp;CoLaB (a research Collaboration between Leeds and Beihang University)</span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2013.5 - present: Member of CCF-Beihang University</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2011.10 - 2016.10: Organiser and Chair of&nbsp;CoLaB (a research Collaboration between Leeds and Beihang University)</span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2013.5 - 2014.8: Member of CCF-Beihang University</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2013.7 - 2014.8: Executive Committee Member of CCF-YOCSEF-GS
 </span></p>
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp; Services </span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Services </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some of my recent services could be found here: <a href="services.html"> services </a> </span></p>
 
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp; Projects</span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Projects</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;I'm the key participant of :</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[1] China 973 Fundamental R&amp;D Program (2011CB302602, 2014CB340304)</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[2]&nbsp;China 863 High Tech Program (2011AA01A202, 2013AA01A213)</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[3] Nature Science Foundation of China (91118008, 90818028, 61170294)</span></p>
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp; Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[2017] <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 </p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[2016] <strong> Outstanding Graduate Award </strong> of Beijing Graduates </p>
@@ -246,7 +244,7 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp; My Friends and Collaborators </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Friends and Collaborators </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
 <a href="http://www.zhenyu.info" target="Dr. Zhenyu Wen"> Dr. Zhenyu Wen</a> &nbsp;&nbsp;
