--- a/publications.html
+++ b/publications.html
@@ -208,6 +208,6 @@ Renyu Yang</strong>, Jie Xu, Tianyu Wo&nbsp;</em></span>&nbsp;&nbsp; &nbsp;&nbsp
  
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> NOTE: * = corresponding author  </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by September 5th, 2016 </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by Nov.5th, 2017 </span> &nbsp; &nbsp;</p>
 </body>
 </html>
