--- a/publications_topics.html
+++ b/publications_topics.html
@@ -241,6 +241,6 @@ In-Memory RDF Triple Store &nbsp; <a href="paper/icpads2016.pdf">[paper]</a>&nbs
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> NOTE: * = corresponding author  </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by August 18th, 2017 </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by Nov. 5th, 2017 </span> &nbsp; &nbsp;</p>
 </body>
 </html>
