--- a/news.html
+++ b/news.html
@@ -74,38 +74,51 @@
 <p><span class="Bolder">News </span></p>
   
 
-<span class="style11">(23/01/2013) My homepage is open!</span>
-<p><span class="style11">(09/03/2013) the paper &quot;improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement&quot; has been awarded as the best Paper
-</span><span class="style11">during the International </span></p>
-<p><span class="style11">Symposium of Autonomous Distributed Systems&quot; ISADS 2013</span></p>
-<span class="STYLE11"> (25/3/2013) I attended IEEE SOSE 2013 </span></p>
-<span class="style11">(15/08/2013) Our paper was accepted by IEEE HPCC 2013</span></p>
-<span class="style11">(09/09/2013) Our paper was accepted by IEEE CloudCom 2013</span></p>
-<span class="STYLE11"> (16/11/2013) I gave presentation at IEEE HPCC 2013 </span></p>
-<span class="STYLE11"> (03/12/2013) I gave presentation at IEEE CloudCom 2013 </span></p>
-<span class="style11">(23/10/2013) Guanghua Scholarship for exellent student is awarded </span></span></p>
-<span class="style11">(14/01/2014) Our paper was accepted by IEEE SOSE-iVCE 2014</span></p>
-<span class="STYLE11"> (17/02/2014) I obtained the research and development internship position in Alibaba Cloud Computing Inc. </span></p>
-<span class="STYLE11"> (24/05/2014) Our papers are accepted by VLDB 2014 and LISA 2014! Big Congrats! </span> </p>
-<span class="STYLE11"> (05/09/2014) Our papers are accepted by IEEE ICPADS 2014 </span></p>
-<span class="STYLE11"> (05/09/2014) I attended VLDB 2014 </span></p>
-<span class="STYLE11"> (17/12/2014) I gave presentation at IEEE ICPADS 2014 </span></p>
-<span class="STYLE11"> (20/06/2015) Our recent works on reliable task execution and resource management by leveraging cost-effective component failovers has been submitted to IEEE Transactions on Service Computing and under review now. </span></p>
-<span class="STYLE11"> (04/11/2015) I passed the Ph.D thesis proposal oral defence and commence to pursue my ph.D degree in the next year! </span></p>
+<span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  (23/01/2013) My homepage is open!</span>
 
-<p><span class="style11"> (21/10/2015) Our paper has been accepted by IEEE HASE 2016</span></p>
+<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (09/03/2013) the paper &quot;improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement&quot; has been awarded as the best Paper </span><span class="style11">during the International Symposium of Autonomous Distributed Systems&quot; ISADS 2013</span></p>
 
-<p><span class="style11"> (25/09/2015) Our paper has been accepted by Springer IoV 2015 </span></p>
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (25/3/2013) I attended IEEE SOSE 2013 </span></p>
 
-<p><span class="style11"> (18/12/2015) Two papers are submitted to IEEE ICDCS 2016 and Transactions on Services Computing and currently under review. </span></p>
+<span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (15/08/2013) Our paper was accepted by IEEE HPCC 2013</span></p>
 
-<p><span class="style11"> (18/01/2016) The visionary paper "Computing at Massive Scale: Scalability and Dependability Challenges" is invited to publish and present at IEEE SOSE 2016 </span></p>
+<span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (09/09/2013) Our paper was accepted by IEEE CloudCom 2013</span></p>
 
-<p><span class="style11"> (04/03/2016) Our paper <a href="paper/tsc2016.pdf">"Reliable Computing Service in Massive-scale Systems Through Rapid Low-cost Failover"</a> is accepted by IEEE Transactions on Services Computing(TSC). Big congrats! </span></p>
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (16/11/2013) I gave presentation at IEEE HPCC 2013 </span></p>
 
-<p><span class="style11">  (28/03/2016) I attend IEEE SOSE 2016 at Oxford, UK. In April I will visit University of Oxford, University of Leeds and University of Edinburgh, working with my collaborators on our recent joint projects and papers. </span></p>
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (03/12/2013) I gave presentation at IEEE CloudCom 2013 </span></p>
 
-<p><span class="style11"> (28/03/2016) PC Member of IEEE FiCloud 2016 and IEEE/ACM BDCAT 2016</span></p>
+<span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (23/10/2013) Guanghua Scholarship for exellent student is awarded </span></span></p>
+
+<span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (14/01/2014) Our paper was accepted by IEEE SOSE-iVCE 2014</span></p>
+
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (17/02/2014) I obtained the research and development internship position in Alibaba Cloud Computing Inc. </span></p>
+
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (24/05/2014) Our papers are accepted by VLDB 2014 and LISA 2014! Big Congrats! </span> </p>
+
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/09/2014) Our papers are accepted by IEEE ICPADS 2014 </span></p>
+
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/09/2014) I attended VLDB 2014 </span></p>
+
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (17/12/2014) I gave presentation at IEEE ICPADS 2014 </span></p>
+
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (20/06/2015) Our recent works on reliable task execution and resource management by leveraging cost-effective component failovers has been submitted to IEEE Transactions on Servie Computing and under review now. </span></p>
+
+<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (04/11/2015) I passed the Ph.D thesis proposal oral defence and commence to pursue my ph.D degree in the next year! </span></p>
+
+<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (21/10/2015) Our paper has been accepted by IEEE HASE 2016</span></p>
+
+<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (25/09/2015) Our paper has been accepted by Springer IoV 2015 </span></p>
+
+<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/12/2015) Two papers are submitted to IEEE ICDCS 2016 and Transactions on Services Computing and currently under review. </span></p>
+
+<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/01/2016) The visionary paper "Computing at Massive Scale: Scalability and Dependability Challenges" is invited to publish and present at IEEE SOSE 2016 </span></p>
+
+<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (04/03/2016) Our paper <a href="paper/tsc2016.pdf">"Reliable Computing Service in Massive-scale Systems Through Rapid Low-cost Failover"</a> is accepted by IEEE Transactions on Services Computing(TSC). Big congrats! </span></p>
+
+<p><span class="style11">  &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/03/2016) I attend IEEE SOSE 2016 at Oxford, UK. In April I will visit University of Oxford, University of Leeds and University of Edinburgh, working with my collaborators on our recent joint projects and papers. </span></p>
+
+<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/03/2016) PC Member of IEEE FiCloud 2016 and IEEE/ACM BDCAT 2016</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (20/04/2016) Our fast-abstract paper "Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters" is accepted by IEEE DSN 2016.  </span></p>
 
@@ -115,6 +128,11 @@
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (03/10/2016) Our paper <a href="paper/hpcc2016.pdf">"An Optimized Storage Method for Vehicle Trajectory Data Exploiting Trajectory Patterns"</a>&nbsp; is accepted by IEEE HPCC 2016 </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (21/11/2016) Our paper <a href="paper/ic2017.pdf">"Fog Orchestration for Internet of Things Services"</a>&nbsp; is accepted by IEEE Internet Computing magazine. </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (07/01/2017) I passed the viva and obtained my Ph.D degree. </span></p>
+
 
 
 
