--- a/publications_topics.html
+++ b/publications_topics.html
@@ -93,6 +93,12 @@
 
 
 
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[9] Intelligent Resource Scheduling: a Machine Learning Perspective  <a href="">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 12th IEEE International Symposium on Service Oriented System Engineering(SOSE 2018), Bamberg, Germany  <span class="redmark">(Invited) </span></span>&nbsp;&nbsp; &nbsp;</p>
+
+ <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Xue Ouyang,Yaofeng Chen, Paul Townend,  Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[8] ROSE: Cluster Scheduling through Efficient Resource Overselling <a href="paper/sosp2017-abstract.pdf">[abstract] </a> <a href="paper/sosp2017-poster.pdf">[poster]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 26th ACM Symposium on Operating Systems Principles(SOSP 2017), poster session, Shanghai, China </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>, Peter Garraghan, Chao Li&nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
