--- a/index.html
+++ b/index.html
@@ -61,7 +61,19 @@
 </head>
 <title>Renyu YANG's Homepage</title>
 <body>
-<span class="STYLE15">&nbsp;&nbsp;<strong>Renyu(Ryan) Yang, PhD </strong> &nbsp;&nbsp;<img src="icons/yin.gif" width="80" height="80" alt="Renyu" border="0" title="Renyu Yang" /></span>
+<span class="STYLE15"> 
+&nbsp;&nbsp;&nbsp; <strong>Renyu(Ryan) Yang, PhD </strong> &nbsp;&nbsp  
+<img src="icons/yin.gif" width="80" height="80" alt="Renyu" border="0" title="Renyu Yang" />  
+</span>
+
+<span class="STYLE15"> 
+&nbsp;&nbsp;
+<img src="images/uol.jpg" width="240" height="64" alt="Renyu" border="0" title="University of Leeds" /> 
+&nbsp; 
+<img src="images/bdbc.png" width="240" height="60" alt="Renyu" border="0" title="BDBC" /> 
+&nbsp; 
+<img src="images/beihang.jpg" width="240" height="65" alt="Renyu" border="0" title="BUAA" />
+</span>
 
 <br>
 <table width="1380" height="359">
@@ -75,7 +87,7 @@
 
 
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;  "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Scientist, Big Data and Brain Computing Research Center(BDBC), <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p>
 
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (LS):&nbsp; Room 8.02, E.C.Stoner Building, Leeds, UK, LS2 9JT &nbsp;</p>
@@ -106,7 +118,7 @@
 
 </td>
 <td width="242" align="left" nowrap="" class="style12">
-<p class="style11"><span class="name"><img src="images/yangry2017.jpg" height="288" width="192"></span></p>
+<p class="style11"><span class="name"><img src="images/yangry2017.jpg" height="300" width="198"></span></p>
 </td>
 </tr>
 </tbody>
