--- a/index.html
+++ b/index.html
@@ -64,11 +64,10 @@
 
 <span class="STYLE15"> 
 &nbsp;&nbsp;&nbsp; <strong>Renyu(Ryan) Yang, PhD </strong> &nbsp;&nbsp  
-<img src="icons/yin.gif" width="80" height="80" alt="Renyu" border="0" title="Renyu Yang" />  
+<img src="icons/yin.gif" width="70" height="70" alt="Renyu" border="0" title="Renyu Yang" />  
 </span>
 
-<span class="STYLE15"> 
-&nbsp;&nbsp;
+<span class="STYLE15"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 <img src="images/uol.jpg" width="240" height="64" alt="Renyu" border="0" title="University of Leeds" /> 
 &nbsp; 
 <img src="images/bdbc.png" width="240" height="60" alt="Renyu" border="0" title="BDBC" /> 
@@ -77,16 +76,21 @@
 </span>
 
 <br>
-<table width="1380" height="359">
+<table width="1580" height="359">
 <tbody>
 <tr>
-<td width="1096" align="right">
 
+<td width="242" align="left" nowrap="" class="style12">
 <div align="left">
 &nbsp;
 </div>
+<p class="style11"><span class="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="images/yangry2017.jpg" height="350" width="238"></span></p>
+</td>
 
-
+<td width="796" align="right">
+<div align="left">
+&nbsp;
+</div>
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;  "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Scientist, Big Data and Brain Computing Research Center(BDBC), <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p>
@@ -114,13 +118,8 @@
 <a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" target="_blank">
     <img src="icons/scholar.jpg" width="45" height="30" alt="Facebook" border="0" title="Google Scholar"/></a>
 </p>
-
-
-
 </td>
-<td width="242" align="left" nowrap="" class="style12">
-<p class="style11"><span class="name"><img src="images/yangry2017.jpg" height="300" width="198"></span></p>
-</td>
+
 </tr>
 </tbody>
 </table>
