--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <img src="icons/yin.gif" width="70" height="70" alt="Renyu" border="0" title="Renyu Yang" />  
 </span>
 
-<span class="STYLE15"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<span class="STYLE15"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 <img src="images/uol.jpg" width="240" height="64" alt="Renyu" border="0" title="University of Leeds" /> 
 &nbsp; 
 <img src="images/bdbc.png" width="240" height="60" alt="Renyu" border="0" title="BDBC" /> 
@@ -76,7 +76,7 @@
 </span>
 
 <br>
-<table width="1580" height="359">
+<table width="1280" height="359">
 <tbody>
 <tr>
 
@@ -141,7 +141,7 @@
 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Hi,All! I am currently a research fellow with the school of computing, University of Leeds, UK. 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Hi,All! I am currently a research fellow with the school of computing, University of Leeds, UK. 
 I am also an adjunct research scientist at the Big Data and Brain Computing Research Center, Beihang University, China.
 I was the research fellow and project leader of several national or international research and engineering projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. we built large-scale resource management infrastructures to support those above.  As for the specific research topics, we are focusing on the scalable resource scheduling at Internet scale, reliable and dependable service provisioning by leveraging effective system failover, long tail mitigation, or quantitative reliability analytics and modeling etc.  I has since 2013 published more than 20 peer-reviewed articles in the field of distributed systems and cloud computing. &nbsp;</span></p> 
 
@@ -233,11 +233,19 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Projects</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;I'm the key participant of :</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[1] China 973 Fundamental R&amp;D Program (2011CB302602, 2014CB340304)</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[2]&nbsp;China 863 High Tech Program (2011AA01A202, 2013AA01A213)</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[3] Nature Science Foundation of China (91118008, 90818028, 61170294)</span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Selected Projects</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [1] Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  executive leader and coordinator </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [2] Storage Model and Mechanism for Joint Clouds (No. 2016YFB1000103), supported by National Key Research and Development Programme, executive leader and coordinator </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [3] On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental  Research and Development Programme,  executive leader and coordinator  </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [4]  ChinaCloud-2: Fundmental Key Software for Cloud Platforms (No.2013AA01A213), supported by National 863 Hi-Tech Research and Development Programme, Key Member </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [5]  ChinaCloud-1: Resource Virtualization and Scheduling (No. 2011AA01A202),  supported by National 863 Hi-Tech Research and Development Programme, Key Member </span></p> 
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [Misc] Nature Science Foundation of China (91118008, 90818028, 61170294)</span></p>
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
