--- a/index.html
+++ b/index.html
@@ -204,6 +204,21 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 </span></p> 
 
 
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Selected Projects</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [1] Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  executive leader and coordinator </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [2] Storage Model and Mechanism for Joint Clouds (No. 2016YFB1000103), supported by National Key Research and Development Programme, executive leader and coordinator </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [3] On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental  Research and Development Programme,  executive leader and coordinator  </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [4]  ChinaCloud Phase II: Fundmental Key Software for Cloud Platforms (No.2013AA01A213), supported by National 863 Hi-Tech Research and Development Programme, Key Member </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [5]  ChinaCloud Phase I: Resource Virtualization and Scheduling (No. 2011AA01A202),  supported by National 863 Hi-Tech Research and Development Programme, Key Member </span></p> 
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [Misc] Nature Science Foundation of China (91118008, 90818028, 61170294)</span></p>
+
+
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xiaoyang Sun, Lian Du (Master student)</span>&nbsp;&nbsp;</p>
@@ -211,7 +226,8 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yunfei Liu, Zhenping Li, Min Shi, Junqing Xiao, Ximing Qu (Master student)</span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xixu Wang (Master graduated in 2017, first employment at Baidu Inc.) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yuda Wang (Master graduated in 2015, first employment at China Telecom.) </span></p> 
- 
+
+
 
 
 
@@ -232,20 +248,6 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some of my recent services could be found here: <a href="services.html"> services </a> </span></p>
 
 
-
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Selected Projects</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [1] Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  executive leader and coordinator </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [2] Storage Model and Mechanism for Joint Clouds (No. 2016YFB1000103), supported by National Key Research and Development Programme, executive leader and coordinator </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [3] On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental  Research and Development Programme,  executive leader and coordinator  </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [4]  ChinaCloud-2: Fundmental Key Software for Cloud Platforms (No.2013AA01A213), supported by National 863 Hi-Tech Research and Development Programme, Key Member </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [5]  ChinaCloud-1: Resource Virtualization and Scheduling (No. 2011AA01A202),  supported by National 863 Hi-Tech Research and Development Programme, Key Member </span></p> 
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [Misc] Nature Science Foundation of China (91118008, 90818028, 61170294)</span></p>
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
