--- a/publications_topics.html
+++ b/publications_topics.html
@@ -148,7 +148,7 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[4] Reducing Late-Timing Failure at Scale: Straggler
 Root-Cause Analysis in Cloud Datacenters  <a href="paper/dsn2016-abstract.pdf">[abstract] </a> [paper] &nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 46th IEEE/IFIP International Conference on Dependable Systems and Networks (DSN 2016 fast abstract), Toulouse, France  </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 46th IEEE/IFIP International Conference on Dependable Systems and Networks (DSN 2016), Toulouse, France  </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xue Ouyang, Peter Garraghan, <strong>Renyu Yang</strong>, Paul Townend, and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[3] Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover
