--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
 
 <span class="STYLE15"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 <img src="images/uol.jpg" width="240" height="64" alt="Renyu" border="0" title="University of Leeds" /> 
-&nbsp; 
-<img src="images/bdbc.png" width="240" height="60" alt="Renyu" border="0" title="BDBC" /> 
-&nbsp; 
+&nbsp; &nbsp; 
 <img src="images/beihang.jpg" width="240" height="65" alt="Renyu" border="0" title="BUAA" />
+&nbsp; 
+<img src="images/bdbc.png" width="240" height="57" alt="Renyu" border="0" title="BDBC" /> 
+
+
 </span>
 
 <br>
-<table width="1280" height="359">
+<table width="1480" height="359">
 <tbody>
 <tr>
 
@@ -143,9 +145,9 @@
 <p class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Hi,All! I am currently a research fellow with the school of computing, University of Leeds, UK. 
 I am also an adjunct research scientist at the Big Data and Brain Computing Research Center, Beihang University, China.
-I was the research fellow and project leader of several national or international research and engineering projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. we built large-scale resource management infrastructures to support those above.  As for the specific research topics, we are focusing on the scalable resource scheduling at Internet scale, reliable and dependable service provisioning by leveraging effective system failover, long tail mitigation, or quantitative reliability analytics and modeling etc.  I has since 2013 published more than 20 peer-reviewed articles in the field of distributed systems and cloud computing. &nbsp;</span></p> 
+I was the research fellow and project leader of several national or international research and engineering projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. we built large-scale resource management infrastructures to support those above.  As for the specific research topics, we have been focusing on the scalable resource scheduling at Internet scale, reliable and dependable service provisioning by leveraging effective system failover, long tail mitigation, or quantitative reliability analytics and modeling etc.  I has since 2013 published more than 25 peer-reviewed articles in the field of distributed systems and cloud computing. &nbsp;</span></p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Before this, I obtained my Ph.D in Jan. 2017 in the&nbsp;<a href="http://scse.buaa.edu.cn" target="_blank">School of Computer Science and Engineering</a>, Beihang University and supervisored by Professor&nbsp;<a href="http://www.comp.leeds.ac.uk/jxu" target="_blank">Jie Xu</a>. I received my B.Sc. from School of Computer Science and Engineering,&nbsp;<a href="http://www.buaa.edu.cn" target="_blank">Beihang University</a>&nbsp;,China in June, 2011. &nbsp;</a> The same year I was accepted as a ph.D student and became&nbsp;a member  of the Institute of Advanced Computing Technology led by Professor&nbsp;Jinpeng Huai.  In the past few years, I had been working in the Network Computing Group(NCG) at Beihang  University, China and Distributed Systems and Services Group(DSS) at Univerity of Leeds, UK. 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Before this, I obtained my Ph.D in Jan. 2017 in the&nbsp;<a href="http://scse.buaa.edu.cn" target="_blank">School of Computer Science and Engineering</a>, Beihang University and supervised by Professor &nbsp;<a href="https://engineering.leeds.ac.uk/staff/331/Professor_Jie_Xu" target="_blank">Jie Xu</a>. I received my B.Sc. from School of Computer Science and Engineering,&nbsp;<a href="http://www.buaa.edu.cn" target="_blank">Beihang University</a>&nbsp;,China in June, 2011. &nbsp;</a> The same year I was accepted as a ph.D student and became&nbsp;a member  of the Institute of Advanced Computing Technology led by Professor&nbsp;Jinpeng Huai.  In the past few years, I had been working in the Network Computing Group(NCG) at Beihang  University, China and Distributed Systems and Services Group(DSS) at Univerity of Leeds, UK. 
 I was the founder and team lead of <a href="http://ved.ivic.org.cn/ivic/wiki/SIGRS" target="_blank">SIGRS reseach group</a>. 
 During 2014 to 2016, I also joined Fuxi the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on cloud system issues at Internet scale. 
 I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>, IEEE and&nbsp;<a href="http://www.ccf.org.cn">CCF(China Computer Federation)</a>.
@@ -166,15 +168,19 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2015.7-2016.2: &nbsp;&nbsp; R&D Intern (Mentored by Mr. Chao Li and Yihui Feng), Distributed Scheduling Group, ODPS, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2016.4-2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.3- 2017.9: &nbsp;&nbsp; Research Fellow and Project Director, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.3- 2017.8: &nbsp;&nbsp; Research Fellow and Project Director, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.10 - Present: &nbsp;&nbsp; Research Scientist, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.9 - Present: &nbsp;&nbsp; Research Scientist, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.11 - Present: &nbsp;&nbsp; Research Fellow, School of Computing, University of Leeds, UK&nbsp;&nbsp;</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.12 - Present: &nbsp;&nbsp; Academic and Engineering Consultant, <a href="http://www.edgetic.com/">Edgetic Limited.</a>, Leeds, UK &nbsp;&nbsp;</span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems for big data and Cloud computing</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Resource management, fault tolerance, dependability </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems for big data, cloud computing and IoT </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Resource management, cluster scheduling, fault tolerance, dependability </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Large-scale system profiling, data-driven optimization </span></p>
 
 
@@ -185,9 +191,9 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services. IEEE Internet Computing, 2017  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  P.Garraghan, X.Ouyang, R.Yang*, D.Mckee and J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters. IEEE Transactions on Services Computing, 2016   </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  P.Garraghan, X.Ouyang, R.Yang*, D.Mckee and J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters. IEEE Trans. on Services Computing, 2016   </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover. IEEE Transactions on Services Computing,2016    </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover. IEEE Trans. on Services Computing,2016    </span></p> 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  R.Yang and J.Xu. Computing at Massive Scale: Scalability and Dependability Challenges. IEEE SOSE 2016</span></p>
 
@@ -206,43 +212,30 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Selected Projects</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [1] Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  executive leader and coordinator </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [1] Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  executive leader and coordinator, 2016.6 - present</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [2] Storage Model and Mechanism for Joint Clouds (No. 2016YFB1000103), supported by National Key Research and Development Programme, executive leader and coordinator </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [2] Storage Model and Mechanism for Joint Clouds (No. 2016YFB1000103), supported by National Key Research and Development Programme, executive leader and coordinator, 2016.5 - present  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [3] On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental  Research and Development Programme,  executive leader and coordinator  </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [3] On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental  Research and Development Programme,  executive leader and coordinator, 2012.1 - 2015.9 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [4]  ChinaCloud Phase II: Fundmental Key Software for Cloud Platforms (No.2013AA01A213), supported by National 863 Hi-Tech Research and Development Programme, Key Member </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [4]  ChinaCloud Phase II: Fundmental Key Software for Cloud Platforms (No.2013AA01A213), supported by National 863 Hi-Tech Research and Development Programme, Key Member, 2013.1 - 2014.1 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [5]  ChinaCloud Phase I: Resource Virtualization and Scheduling (No. 2011AA01A202),  supported by National 863 Hi-Tech Research and Development Programme, Key Member </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [5]  ChinaCloud Phase I: Resource Virtualization and Scheduling (No. 2011AA01A202),  supported by National 863 Hi-Tech Research and Development Programme, Key Member, 2011.9 - 2013.12 </span></p> 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [Misc] Nature Science Foundation of China (91118008, 90818028, 61170294)</span></p>
 
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xiaoyang Sun, Lian Du (Master student)</span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Jianyong Zhu (PhD. student)</span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yunfei Liu, Zhenping Li, Min Shi, Junqing Xiao, Ximing Qu (Master student)</span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD students: Jianyong Zhu(2017.5- ), Xianyong Yi (2018.9 - ) </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Xiaoyang Sun(2015.9 - ), Yunfei Liu, Zhenping Li, Min Shi, Junqing Xiao, Ximing Qu (2017.9 - ) </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Lian Du (Master graduated in 2018, first employment at Alibaba Cloud Inc.) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xixu Wang (Master graduated in 2017, first employment at Baidu Inc.) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yuda Wang (Master graduated in 2015, first employment at China Telecom.) </span></p> 
 
 
-
-
-
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some talks including the technical reports in the industrial meetings or academic presentations I gave could be found here: <a href="presentations.html"> talks </a> </span></p>
-
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Patents</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some Chinese patents I have applied in the computer science and application field could be found in <a href="patents.html"> patents </a> </span></p>
-
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Activities</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2011.10 - 2015.11: Secretary general&nbsp;of China 973 Fundamental R&amp;D Program (2011CB302602)</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2011.10 - 2016.10: Organiser and Chair of&nbsp;CoLaB (a research Collaboration between Leeds and Beihang University)</span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2013.5 - 2014.8: Member of CCF-Beihang University</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;2013.7 - 2014.8: Executive Committee Member of CCF-YOCSEF-GS
-</span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Services </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some of my recent services could be found here: <a href="services.html"> services </a> </span></p>
