--- a/services.html
+++ b/services.html
@@ -73,22 +73,13 @@
 <title> Renyu YANG's Services </title>
 <body>
 <p><span class="Bolder">Services</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong>Reviewer </strong> of</span> :</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; <strong> External Reviewer </strong> of</span> :</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE DSN, IEEE SRDS, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE iVCE, IEEE CCDC, IEEE CSC etc.; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Conferences: IEEE DSN, IEEE SRDS, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE iVCE, IEEE CCDC, IEEE CSC etc.; </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Journal of Information Science and Engineering, International Journal of Engineering Intelligent System;
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Transaction on Cloud Computing (TCC);
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Transactions:  IEEE Trans. on Cloud Computing (TCC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. on Sustainable Computing; IEEE Trans. Dependable and Secure Computing(TDSC); IEEE IoT Journal, etc. 
 </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Transaction on Parallel and Distributed System (TPDS);
-</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Open Journal of Cloud Computing (OJCC);
-</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ACM Computing Survey;
-</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Journal of Cloud Computing </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Other Journals: Future Generation Computing Systems(FGCS);  ACM Computing Survey; Open Journal of Cloud Computing (OJCC);  Journal of Cloud Computing;  Journal of Information Science and Engineering, International Journal of Engineering Intelligent System;  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Conferences Organizer: </strong></span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Organizer: IEEE ISORC'2012, IEEE iVCE'2012, CoLaB Workshop'2012,CoLaB Workshop'2013, CoLaB Workshop'2014</span></p>
@@ -96,8 +87,7 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE ESaaSA 2014 (in conjuction with IEEE CLOSER 2014)</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE IWES 2014 (in conjuction with IEEE CloudCom 2014) </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE FiCloud 2016 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE/ACM BDCAT 2016 (The 3rd IEEE/ACM International Conference on Big Data Computing, Applications and Technologies)</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ACM BDCAT 2017 (The 4th ACM International Conference on Big Data Computing, Applications and Technologies)</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE/ACM BDCAT 2016,2017,2018  (The IEEE/ACM International Conference on Big Data Computing, Applications and Technologies)</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Publicity Chair: </strong> </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) </span></p>
 
