--- a/news.html
+++ b/news.html
@@ -133,10 +133,13 @@
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (07/01/2017) I passed the viva and obtained my Ph.D degree. </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/08/2017) The work of rapid docker container deployment was accepted by IEEE HPCC 2017. </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/09/2017) The work of machine learning based node performance analyzer was accepted by IEEE ICPADS 2017. </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/09/2017) The work of efficient resource overselling was accepted by ACM SOSP 2017 poster session. </span></p>
 
-
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (08/11/2017) I moved to University of Leeds UK as a research fellow. </span></p>
 
 </body>
 </html>
