--- a/publications_topics.html
+++ b/publications_topics.html
@@ -84,14 +84,16 @@
 	<a href="./publications.html">[years] </a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
-<!--p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">  * = corresponding author  </span> &nbsp; &nbsp;</p-->
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> NOTE: * = the correspondence author of papers with my supervised students or team members </span> &nbsp; &nbsp;</p>
  
 
  
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: Massive-scale Resource Management and Orchestration </span></p>
 
-
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[10]  
+ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 38th IEEE International Conference on Distributed Computing Systems (ICDCS 2018), Vienna, Austria (to appear)</span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>,Peter Garraghan, Tianyu Wo, Jie Xu, Jianyong Zhu, Chao Li &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[9] Intelligent Resource Scheduling: a Machine Learning Perspective  <a href="">[paper]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 12th IEEE International Symposium on Service Oriented System Engineering(SOSE 2018), Bamberg, Germany  <span class="redmark">(Invited) </span></span>&nbsp;&nbsp; &nbsp;</p>
