--- a/index.html
+++ b/index.html
@@ -129,26 +129,25 @@
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp;  What's new </p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/04/2018) The work of "ROSE: Cluster Resource Scheduling via Speculative Over-subscription" is accepted as a full paper and will appear in IEEE ICDCS 2018. Big Congrats!  </span></p>
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/11/2017) I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017  for the key participating and contributions to the reliable resource management and scheduling. The joint project is led by Alibaba Cloud, Beihang University and Tsinghua University. </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (08/11/2017) I moved to University of Leeds UK as a research fellow. </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/09/2017) The work of efficient resource overselling was accepted by ACM SOSP 2017 poster session. </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/09/2017) The work of machine learning based node performance analyzer was accepted by IEEE ICPADS 2017. </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/08/2017) The work of rapid docker container deployment was accepted by IEEE HPCC 2017. </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Check more previous events in <a href="news.html"> old events </a></span></p>
 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Hi,All! I am currently a research fellow with the school of computing, University of Leeds, UK. 
-I am also an adjunct research scientist at the Big Data and Brain Computing Research Center, Beihang University, China.
-At present, I am leading several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 1) scalable resource scheduling at Internet scale, 2) dependable service provisioning by leveraging effective system failover, long-tail task mitigation, and quantitative reliability modeling etc. and 3) geo-distributed data processing etc. I has published more than 25 peer-reviewed papers in the field of distributed systems and cloud computing. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Services Computing, IEEE Internet Computing, VLDB, IEEE DSN, ACM SOSP(poster), USENIX LISA, IEEE HASE, IEEE ICPADS etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participating and contributions to the reliable resource management and scheduling at massive scale.  
+I am also an adjunct research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, Beihang University, China.
+At present, I am leading several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
+1) scalable and intelligent resource scheduling at Internet scale; 
+2) dependable service provisioning by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
+3) improved system utility for resource management through resource over-subscription mechanism and multi-objective optimization, etc.; 
+and 4) geo-distributed data processing, etc. 
+I has published more than 25 peer-reviewed papers in the field of distributed systems and cloud computing. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Services Computing, IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, ACM SOSP(poster), USENIX LISA, IEEE HASE, IEEE ICPADS etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participating and contributions to the reliable resource management and scheduling at massive scale.  
 </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   I obtained my PhD degree in January 2017 from the School of Computing, Beihang University, China. Before this, I received my B.Sc. from the same school in 2011. In the past few years, I had been working both in the Networked Computing Group (NCG) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds. 
-I was the founder and team lead of SIGRS (Special Interest Group on Resource Scheduling) and MSDS (Massive-Scale Distributed Systems) research group. I had led several UK-China research collaborations including the COLAB project and developed strong links with the UK Computer Science community (such as University of Leeds, University of Edinburgh, Lancaster University etc.). During 2014 to 2016, I also joined Fuxi the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on cloud system issues at Internet scale.  I am a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>, IEEE and&nbsp;<a href="http://www.ccf.org.cn">CCF(China Computer Federation)</a>.
+I was the founder and team lead of SIGRS (Special Interest Group on Resource Scheduling) and MSDS (Massive-Scale Distributed Systems) research group. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with the UK Computer Science community (such as University of Leeds, University of Edinburgh, Lancaster University etc.). During 2014 to 2016, I also joined Fuxi the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on cloud system issues at Internet scale.  I am a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>, IEEE and&nbsp;<a href="http://www.ccf.org.cn">CCF(China Computer Federation)</a>.
 </span></p>
 
 
@@ -185,6 +184,10 @@ I was the founder and team lead of SIGRS (Special Interest Group on Resource Sch
 
 <p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p> 
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  ROSE: Cluster Resource Scheduling via Speculative Over-subscription, IEEE ICDCS 2018  </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; R.Yang, X.Ouyang, Y.Chen, P.Townend, J.Xu. Intelligent Resource Scheduling: a Machine Learning Perspective, IEEE SOSE 2018  </span></p>
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP 2017 (poster)  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services. IEEE Internet Computing, 2017  </span></p>
@@ -192,8 +195,6 @@ I was the founder and team lead of SIGRS (Special Interest Group on Resource Sch
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  P.Garraghan, X.Ouyang, R.Yang*, D.Mckee and J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters. IEEE Trans. on Services Computing, 2016   </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover. IEEE Trans. on Services Computing,2016    </span></p> 
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  R.Yang and J.Xu. Computing at Massive Scale: Scalability and Dependability Challenges. IEEE SOSE 2016</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  X.Ouyang, P.Garraghan, R.Yang, P.Townend and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, IEEE DSN 2016 (short paper)</span></p>
 
