--- a/publications.html
+++ b/publications.html
@@ -76,8 +76,21 @@
 	<a href="./publications_topics.html">[topics]</a>
 	<a href="./publications.html">[years] </a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
-<!--p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">  * = corresponding author  </span> &nbsp; &nbsp;</p-->
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> NOTE: * = the correspondence author of papers with my supervised students or team members </span> &nbsp; &nbsp;</p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018</span></p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[c21]  ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 38th IEEE International Conference on Distributed Computing Systems (ICDCS 2018), Vienna, Austria (to appear)</span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>,Peter Garraghan, Tianyu Wo, Jie Xu, Jianyong Zhu, Chao Li &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[c20] Intelligent Resource Scheduling: a Machine Learning Perspective  <a href="paper/sose2018.pdf">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 12th IEEE International Symposium on Service Oriented System Engineering(SOSE 2018), Bamberg, Germany   </span>   <span class="red">(Invited) </span> </p>
+ <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Xue Ouyang,Yaofeng Chen, Paul Townend,  Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[c19]  A Scalable lnternet-of-Vehicles Service over Joint Clouds  <a href="paper/jcc2018.pdf"> [paper] </a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 9th IEEE International Workshop on Joint Cloud Computing(JCC 2018), Bamberg, Germany  </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Yong Zhang, Mingming Zhang, Tianyu Wo, Xuelian Lin, <strong>Renyu Yang</strong>, Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp; </p>
+
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2017</span></p>
 
@@ -207,7 +220,6 @@ Multi-Tenants Cloud Environments <a href="paper/hase2016.pdf">[paper]</a>&nbsp; 
 Renyu Yang</strong>, Jie Xu, Tianyu Wo&nbsp;</em></span>&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;</p>
  
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> NOTE: * = corresponding author  </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by Nov.5th, 2017 </span> &nbsp; &nbsp;</p>
 </body>
 </html>
